<resources>
    <string name="app_name">LeBonPetitCoin</string>
    <string name="barTitle">LeBonPetitCoin</string>
    <string name="d_connexion">Déconnexion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="connected">Vous êtes connecté !</string>
    <string name="failConnect">Echec de connexion</string>
    <string name="notConnected">Vous n\'êtes pas connecté !</string>
    <string name="disconnected">Vous êtes déconnecté !</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signIn">S\'authentifier</string>
    <string name="mon_compte">Mon compte</string>
    <string name="messages">Messages</string>
    <string name="mes_favoris">Mes favoris</string>
    <string name="statistiques">Statistiques</string>
    <string name="s_identifier">S\'identifier</string>
    <string name="parametres">Parametres</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="app_label">LeBonPetitCoin</string>
    <string name="search_hint">Recherche...</string>
    <string name="lebonpetitcoin">LeBonPetitCoin</string>
    <string name="recherche_avanc_e">Recherche Avancée</string>
    <string name="modifier_mes_annonces">Modifier mes annonces</string>
    <string name="profile">Profile</string>
    <string name="connexion">Connexion</string>
    <string name="configuration">Configuration</string>
    <string name="recherche">Recherche</string>
    <string name="voir_toute_les_annonces">Voir toute les annonces</string>
    <string name="rechercher">Rechercher</string>

    <!-- Used in SignUp/SignIn -->
    <string name="s_inscrire">S\'inscrire</string>
    <string name="signUp">S\'inscrire</string>
    <string name="registered_emailid">Entrez votre mail ici : </string>
    <string name="email">E-mail</string>
    <string name="passowrd">Password</string>
    <string name="login">S\'authentifier</string>
    <string name="show_pwd">Voir mot de passe</string>
    <string name="hide_pwd">Cacher mot de passe</string>
    <string name="forgot">Mot de passe oublié ?</string>
    <string name="newUser">Pas encore membre ? Inscrivez-vous ici.</string>
    <string name="fullName">Pseudonyme</string>
    <string name="mobileNumber">Numéro de téléphone</string>
    <string name="location">Localisation</string>
    <string name="confirmPassword">Confirmez le mot de passe</string>
    <string name="already_user"><u>Vous avez déjà un compte ? Cliquez ici.</u></string>
    <string name="terms_conditions">En cliquant sur le bouton s\'inscrire, vous indiquez avoir pris connaissance et accepté les Conditions Générales d\'Utilisation.</string>
    <string name="password">Mot de passe</string>
    <string name="identifiant">Identifiant</string>
    <string name="siret">SIRET</string>
    <string name="pseudoPris">Pseudo déja pris</string>
    <string name="envoie_en_cours">Envoie en cours</string>
    <string name="acceptez_les_conditions">Acceptez les conditions</string>
    <string name="remplir_les_champs_obligatoires">Remplir les champs obligatoires</string>
    <string name="email_invalide">Email invalide</string>
    <string name="password_not_same">Les deux mots de passe ne correspondent pas</string>
    <string name="badSignIn">E-mail et/ou mot de passe invalide</string>
    <string name="champ_vide">Veuillez remplir tout les champs</string>
    <string name="badSIRET">Le SIRET est invalide</string>
    <string name="badNum">Le numéro est invalide</string>
    <string name="googleFailSignUp">Mail déja utilisé ou mot de passe pas assez fort</string>
    <string name="compte_cre_">Compte crée !</string>
    <string name="checkMail">C\'est envoyé ! Verifiez vos mails :) !</string>


    <!-- Used in addAnnonce/ModifierAnnonce -->
    <string name="modifier_la_description">Modifier la description</string>
    <string name="modifier_le_prix">Modifier le prix</string>
    <string name="prix">Prix</string>
    <string name="moyen_de_paiement">Moyen de paiement</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="description">Description</string>
    <string name="modifier_le_titre">Modifier le titre</string>
    <string name="titre">Titre</string>
    <string name="prix_entre_0_01_et_9999">Prix : entre 0.01 et 9999</string>
    <string name="cat_gorie_s">Catégorie(s)</string>
    <string name="moyen_de_paiement_s">Moyen de paiement(s)</string>
    <string name="prix_entre_0_et_9999">Prix entre 0 et 9999</string>
    <string name="echec">Échec</string>
    <string name="maxImage">Vous ne pouvez pas ajouter plus d\'images</string>
    <string name="annonce_ajoute">Annonce ajouté !</string>
    <string name="creation_de_l_annonce_en_cours">Création de l\'annonce en cours</string>
    <string name="null_auteur">Échec de la récupération du compte</string>
    <string name="signale">L\'annonce à étais signalé</string>
    <string name="badSignale">Erreur durant l\'envoie du signalement</string>
    <string name="alertSignale">Êtes-vous sûre de vouloir signaler cette annonce ?</string>
    <string name="buttonSignale">Signaler</string>
    <string name="alertTitreSignale">Veuillez remplir ce formulaire</string>





    <!-- Used in Annonce -->
    <string name="auteur">Auteur</string>
    <string name="date">Date</string>
    <string name="title">TitreAnnonce</string>
    <string name="departement">Département</string>
    <string name="adresse">Adresse</string>
    <string name="content_description_media">DescriptionAnnonce</string>
    <string name="profile_de_l_auteur">Profile de l\'auteur</string>
    <string name="contacter_le_vendeur_via_messagerie">Contacter le vendeur via messagerie</string>
    <string name="signaler_l_annonce">Signaler l\'annonce</string>
    <string name="fav">Ajouté aux favoris!</string>


    <!-- Used in Profile -->
    <string name="selectionner_votre_moyen_de_communication_privil_gi_si_tout_est_s_l_ctionn_cela_signifie_qu_il_y_en_a_aucun">Selectionner votre moyen de communication à privilégié, si tout est séléctionné cela signifie qu\'il y en a aucun.</string>
    <string name="cliquez_sur_la_zone_grise_si_vous_souhaitez_changer_d_image_de_profile">Cliquez sur la zone grise si vous souhaitez changer d\'image de profile</string>
    <string name="cliquez_sur_la_zone_grise_vous_souhaitez_ajouter_une_image_de_profile">Cliquez sur la zone grise vous souhaitez ajouter une image de profile</string>
    <string name="moyen_de_contacte_a_privilegier">Moyen(s) de contacte à privilégier : </string>



    <!-- Used in Statistique -->
    <string name="cliquer_sur_une_de_vos_annonces_pour_avoir_des_d_tails">Cliquer sur une de vos annonces pour avoir des détails</string>
    <string name="nombre_de_vues_par_annonce">Nombre de vues par annonce</string>
    <string name="visualisation_les_30_dernier_jours">Visualisation les 30 dernier jours</string>
    <string name="visualisation_les_7_dernier_jours">visualisation les 7 dernier jours</string>
    <string name="visalisation_par_un_membre">Visualisation par un membre</string>
    <string name="visalisation_par_un_nonMembre">Visualisation par un invité</string>


    <!-- Used in Recherche -->
    <string name="position_exacte">Position exacte</string>
    <string name="position_recherche">Position exacte (en attente de récupération)</string>
    <string name="position_ok">Position exacte (disponible)</string>
    <string name="d_partement_ex_01_20_34">Département. Ex : 01, 20, 34</string>
    <string name="vous_ne_voulez_pas_donner_votre_position_exacte">Vous ne voulez pas donner votre position exacte ?</string>

    <!-- Used in Conversation -->
    <string name="ecrire_un_message">Ecrire un message</string>
    <string name="attention">Attention !</string>
    <string name="confirmation">Êtes-vous sûre de vouloir supprimer votre annonce ?</string>
    <string name="badMessage">Il n\y a pas d\'image ou de texte</string>

    <!-- Used in Everywhere -->
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="supprimer">Supprimer</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="submit">Envoyer</string>

    <!-- Used in RechercheAvancee-->
    <string name="badDepartement">Mauvais format de département</string>
    <string name="badPosition">Échec de la récupération de la position</string>
    <string name="badTooManyPosition">Choisir un seul moyen de recherche avec localisation</string>
    <string name="badNoKM">Pour une recherche avec localisation mettre un nombre de km maximum</string>
    <string name="badKM">Le nombre de km doit se trouver entre 1 et 200 km </string>

    <!-- Used in Localisation-->
    <string name="etat_disponible">État disponible</string>
    <string name="etat_indisponible">État indisponible"</string>
    <string name="etat_temporairement_indisponible">État temporairement indisponible</string>
    <string name="etat">État</string>
    <string name="active"> activé !</string>
    <string name="desactive"> désactivé !</string>
    <string name="voici_les_derni_res_annonces_ajout_s">Voici les dernières annonces ajoutés</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="infos_du_vendeur">Infos du vendeur : </string>
    <string name="infos_du_vendeur_pro">Infos du vendeur professionnel : </string>
    <string name="autre_s_annonce_s_du_m_me_vendeur">Autre(s) annonce(s) du même vendeur</string>
    <string name="contenu_inappropri">Contenu inapproprié</string>
    <string name="spam_fausse_annonce">SPAM / fausse annonce</string>
    <string name="message">Message</string>
    <string name="message_facultatif">Message (facultatif)</string>
    <string name="re_bonjour">Re-Bonjour !</string>
    <string name="afin_de_ne_pas_abuser_de_la_modification_nous_avons_interdit_le_changement_d_images_veuillez_cr_e_une_nouvelle_annonce_et_supprimer_celle_i_au_besoins">Afin de ne pas abuser de la modification, nous avons interdit le changement d\'images. Veuillez crée une nouvelle annonce et supprimer celle çi au besoins.</string>
    <string name="propos_de_nous">À propos de nous</string>
    <string name="ajouter_une_annonce">Ajouter une Annonce</string>
    <string name="acceuil">Acceuil</string>



    <!-- Used in Apropos-->

    <string name="a_propos_pk">C\'est une façons d\'aider la planète tout en se faisant plaisir ! \n LeBonPetitCoin donne une partie de ses revenus pour aider les animaux en antarctique</string>
    <string name="a_propos_pk_titre">Pouquoi utiliser LeBonPetitCoin?</string>
    <string name="a_propos_qui_somme_nous">Qui sommes-nous ?</string>
    <string name="a_propos_qui">Nous sommes une petite équipe française attaché à la nature</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="a_propos_contacte">Par mail: pouetpouet@LebonPetitCoin.fr \n Par téléphone : 0606060606</string>


</resources>