<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_account"
            android:icon="@drawable/seal"
            android:title="@string/mon_compte" />
    </group>

    <item android:title="Configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_message"
                    android:icon="@drawable/chat_24dp"
                    android:title="@string/messages" />
                <item
                    android:id="@+id/activity_main_drawer_fav"
                    android:icon="@drawable/favorite_white_24dp"
                    android:title="@string/mes_favoris" />
                <item
                    android:id="@+id/activity_main_drawer_stats"
                    android:icon="@drawable/seal"
                    android:title="@string/statistiques" />
            </group>
        </menu>
    </item>

    <item android:title="Connexion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_signIn"
                    android:icon="@drawable/chat_24dp"
                    android:title="@string/s_identifier" />
                <item
                    android:id="@+id/activity_main_drawer_signUp"
                    android:icon="@drawable/favorite_white_24dp"
                    android:title="@string/s_inscrire" />

            </group>
        </menu>
    </item>

</menu>
