<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <ScrollView
        style="@style/linearParent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/s_inscrire"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="187.5dp"
                android:layout_height="185.5dp"
                android:gravity="center"
                android:padding="5dp"
                app:strokeWidth="5dp"
                app:strokeColor="@color/colorPrimary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:background="@color/grey"
                />
            <TextView
                style="@style/viewParent"
                android:text="@string/cliquez_sur_la_zone_grise_vous_souhaitez_ajouter_une_image_de_profile"
                android:gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/fullName"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/fullName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/userEmailId"
                    style="@style/modifiedEditText"

                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/mobileNumber"
                    style="@style/modifiedEditText"
                    android:inputType="phone"
                    android:hint="@string/mobileNumber"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/proTIL"
                style="@style/parent"
                android:visibility="gone"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/pro"
                    style="@style/modifiedEditText"
                    android:hint="@string/siret"
                    android:inputType="number"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/password"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/confirmPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/confirmPassword"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                style="@style/viewParent"
                android:id="@+id/terms_conditions"
                android:text="@string/terms_conditions"/>

            <com.google.android.material.button.MaterialButton
                style="@style/gradientButton"
                android:id="@+id/signUpBtn"
                android:text="@string/s_inscrire"
                app:backgroundTint="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <TextView
                style="@style/parent"
                android:id="@+id/already_user"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/already_user"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>