<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >



    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        >


        <RadioButton
            android:id="@+id/inapproprieRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:checked="true"
            android:text="@string/contenu_inappropri" />


        <RadioButton
            android:id="@+id/spamRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/maleRadioButton"
            android:text="@string/spam_fausse_annonce" />

    </RadioGroup>

    <EditText
        style="@style/modifiedEditText"
        android:id="@+id/messageEditText"
        android:layout_below="@+id/radioGroup"
        android:hint="@string/message_facultatif" >

        <requestFocus />
    </EditText>

</RelativeLayout>