<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageProfile"
        android:layout_width="187.5dp"
        android:layout_height="185.5dp"
        android:gravity="center"
        android:padding="5dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/colorPrimary"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@color/grey"
        />
    <TextView
        style="@style/viewParent"
        android:text="@string/cliquez_sur_la_zone_grise_vous_souhaitez_ajouter_une_image_de_profile"
        android:gravity="center" />

    <EditText
        android:id="@+id/tel"
        style="@style/modifiedEditText"
        android:hint="@string/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/selectionner_votre_moyen_de_communication_privil_gi_si_tout_est_s_l_ctionn_cela_signifie_qu_il_y_en_a_aucun"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LContacte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/gradientButton"
        app:backgroundTint="@null"
        android:id="@+id/miseAjourButton"
        android:textStyle="bold"
        android:text="@string/mettre_jour"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/loginViewsMargin"/>




</LinearLayout>